# rl-memory-curriculum

./: .env.example  .gitignore  FUTURE_WORK.md  LICENSE  README.md  RESULTS_ANALYSIS.md  REVISION_HISTORY.md  pyproject.toml  requirements.txt
configs/: eval.yaml  train_locomo_only.yaml  train_longmemeval_only.yaml  train_mixed.yaml
configs/full_ft/: README.md  train_locomo_only.yaml  train_longmemeval_only.yaml  train_mixed.yaml
data/: README.md  prepare_locomo.py  prepare_longmemeval.py  prepare_mixed.py
eval/: analyze_results.py  judge.py  metrics.py  run_eval.py
paper/tables/: table1_main_results.md  table2_per_type.md  table3_cost.md  table4_aa_vs_mm.md
results/: README.md  all_results.json  config_a_training_meta.json  config_b_training_meta.json  config_c_training_meta.json
scripts/: patch_deps.py  run_aggregate.sh  run_all.sh  run_eager.bat  run_eager.sh  run_eval_debug.sh  run_eval_subset.sh  run_train_one.sh  setup.sh
src/: __init__.py  answer_agent.py  memory_bank.py  memory_manager.py  pipeline.py  retriever.py  reward.py  tester.py  train_grpo.py
src/eval/: model_loader.py  runner.py
src/memory/: retriever.py
src/train/: callbacks.py  grpo.py  model.py  rewards.py
submit/: aggregate.sub  eval_a.sub  eval_b.sub  eval_c.sub  run.dag  run.dag.condor.sub  train_a.sub  train_b.sub  train_c.sub
tests/: test_dry_run.py  test_eval_dry_run.py
